--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
     <app-chat-component/>
   </aside>
 
-  <main class="main-content">
-    <router-outlet></router-outlet>
-  </main>
+  <div class="main-content">
+    <router-outlet/>
+  </div>
 </div>
