--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <div class="app-container">
   <aside class="sidebar">
-    <app-chat-component/>
+    <app-root></app-root>
   </aside>
 
-  <div class="main-content">
-    <router-outlet/>
-  </div>
+  <main class="main-content">
+    <router-outlet></router-outlet>
+  </main>
 </div>
